cabal-version: >=1.10
name: FRPEngine
version: 0.2.0.0
maintainer: s.walinder@gmail.com
author: Sebastian Wålinder
build-type: Simple
extra-source-files:
    CHANGELOG.md

library
    hs-source-dirs: src
    default-language: Haskell2010
    -- ghc-options: -Weverything -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-implicit-prelude -Wmissing-home-modules -Widentities -Wredundant-constraints -Wpartial-fields -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wmonomorphism-restriction -Wall-missed-specialisations -Wcpp-undef -Wno-missing-signatures
    ghc-options: -w -Wmissing-home-modules

    other-modules:
      FRPEngine.Collision.AABB

      FRPEngine.Collision.GJKInternal.Support
      FRPEngine.Input.Internal.Types
      FRPEngine.Input.Internal.UpdateInputstate
      FRPEngine.Input.Internal.CustomEventConversion

    exposed-modules:
      FRPEngine.Types
      FRPEngine.Physics
      FRPEngine.Init
      FRPEngine.Collision.Types
      FRPEngine.Collision.GJK
      FRPEngine.Collision.Util
      FRPEngine.YampaUtils.Types
      FRPEngine.Input.Types
      FRPEngine.Input.Input
      FRPEngine.Input.Utils
      FRPEngine.Render.SDL.Primitives

    build-depends:
                  base >=0
                , extra
                , lens
                , linear

                , sdl2
                , sdl2-ttf
                -- SDL TFF dependency
                , text

                -- SDL draw lines dependency
                , vector

                , bearriver
                , template-haskell
                , gjk

                -- For hotloading
                , aeson
                , bytestring
                , directory